--- a/app/src/main/res/layout/bottom_sheet_product_details.xml
+++ b/app/src/main/res/layout/bottom_sheet_product_details.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/tvPrice"
